--- a/assets/login.html
+++ b/assets/login.html
@@ -14,12 +14,16 @@
 
         <div class="fundo"></div>
         <div class="fundo-camada-opacidade"></div>
+        <header>
+            <img src="../assets/imagens/logo.png" width="165">
+
+        </header>
         <div class="conteudo-formulario">
             <h2 class="titulo-login">Entrar</h2>
             <input type="email"class="email" placeholder="Digite seu email">
-            <br>
+            <div class="aviso-formulario">Informe um email ou número de telefone</div>
             <input type="password" class="senha" placeholder="Digite sua senha">
-
+            <div class="aviso-formulario">A senha deve ter entre 4 e 60 caracteres</div>
 
         </div>
 
