--- a/assets/login.html
+++ b/assets/login.html
@@ -24,11 +24,11 @@
             <div class="aviso-formulario">Informe um email ou número de telefone</div>
             <input type="password" class="senha" placeholder="Digite sua senha">
             <div class="aviso-formulario">A senha deve ter entre 4 e 60 caracteres</div>
-
+            <button> Entrar</button>
         </div>
 
 
-
+        
         <!-- aqui vai o formulario-->
 
         <script src=""></script>
